--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,27 @@
 <html lang="en">
 
 <head>
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <!-- Bootstrap core JavaScript-->
+    <script src="{% static 'vendor/jquery/jquery.min.js'%}"></script>
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
+
+    <!-- Core plugin JavaScript-->
+    <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js'%}"></script>
+
+    <!-- Custom scripts for all pages-->
+    <script src="{% static 'js/sb-admin-2.min.js'%}"></script>
+
+    <!-- Page level plugins -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <link href="//cdn.bootcss.com/bootstrap-datetimepicker/4.17.44/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+<script src="//cdn.bootcss.com/jquery/3.0.0/jquery.min.js"></script>
+<script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="//cdn.bootcss.com/moment.js/2.17.1/moment.min.js"></script>
+
+    <!-- Page level custom scripts -->
+    <script src="{% static 'js/demo/chart-area-demo.js'%}"></script>
+    <script src="{% static 'js/demo/chart-pie-demo.js'%}"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -42,18 +62,36 @@
             </a>
 
             <!-- Divider -->
-            <hr class="sidebar-divider my-0">
+            <!-- <hr class="sidebar-divider my-0"> -->
 
+            
+
+            <!-- Divider -->
+            <!-- <hr class="sidebar-divider"> -->
+            <li class="nav-item ">
+                <a class="bg-gradient-primary fw-bold  p-1 nav-link collapsed text-white" href="#" data-toggle="collapse" data-target="#profile"
+                    aria-expanded="true" aria-controls="collapseTwo">
+                    <i class="fas fa-fw fa-cog"></i>
+                    <span class="text-black">Welcome, {{user.username|title}}!</span>
+                </a>
+                <div id="profile" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">login:<br>{{user.last_login}}</h6>
+                        <a class="collapse-item" href="#">Profilku</a>
+                        <a class="collapse-item" href="#">Setting Sistem</a>
+                        <a class="collapse-item" href="/logs/">Catatan Aktivitas (LOG)</a>
+                        <a class="collapse-item text-danger fs-italic fw-bold" href="/master/gol/add/" data-toggle="modal" data-target="#logoutModal">Logout</a>
+                    </div>
+                </div>
+            </li>
+             <!-- Divider -->
+            <hr class="sidebar-divider">
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
                 <a class="nav-link" href="/">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
-
-            <!-- Divider -->
-            <hr class="sidebar-divider">
-
             <!-- Heading -->
             <div class="sidebar-heading">
                 Master Data
@@ -209,8 +247,8 @@
                     <!-- Topbar Search -->
                     <form
                         class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                        <div class="input-group">
-                            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
+                        <div class="input-group {%if mywebsite is None%}d-none{%endif%}">
+                            <input type="text" class="form-control bg-light border-0 small" placeholder="Mencari dari Daftar..."
                                 aria-label="Search" aria-describedby="basic-addon2" id="coba">
                             <div class="input-group-append">
                                 <button class="btn btn-primary" type="button" onclick="cobaya()">
@@ -367,14 +405,14 @@
                         <div class="topbar-divider d-none d-sm-block"></div>
 
                         <!-- Nav Item - User Information -->
-                        <li class="nav-item dropdown no-arrow">
+                        <!-- <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="mr-2 d-none d-lg-inline text-white small fw-bold bg-warning p-2 rounded ">welcome, {{user.username|title}}</span>
                                 
-                            </a>
+                            </a> -->
                             <!-- Dropdown - User Information -->
-                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
+                            <!-- <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="userDropdown">
                                 <a class="dropdown-item" href="#">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
@@ -394,7 +432,7 @@
                                     Logout
                                 </a>
                             </div>
-                        </li>
+                        </li> -->
 
                     </ul>
 
@@ -411,6 +449,7 @@
 
                     <!-- Content Row -->
                     {% block contents%}
+                    {{form.media}}
                     {% endblock %}
 
                 </div>
@@ -460,22 +499,7 @@
         </div>
     </div>
 
-    <!-- Bootstrap core JavaScript-->
-    <script src="{% static 'vendor/jquery/jquery.min.js'%}"></script>
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
-
-    <!-- Core plugin JavaScript-->
-    <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js'%}"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script src="{% static 'js/sb-admin-2.min.js'%}"></script>
-
-    <!-- Page level plugins -->
-    <script src="{% static 'vendor/chart.js/Chart.min.js' %}"></script>
-
-    <!-- Page level custom scripts -->
-    <script src="{% static 'js/demo/chart-area-demo.js'%}"></script>
-    <script src="{% static 'js/demo/chart-pie-demo.js'%}"></script>
+    
     
     <script>
         function cobaya() {
@@ -484,6 +508,8 @@
             if(mywebsite.length>0)
                 document.location.href=mywebsite+document.getElementById('coba').value;
         }
+
+        
     </script>
 </body>
 
