--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,23 @@
 <html lang="en">
 
 <head>
+    <!-- Bootstrap core JavaScript-->
+    <script src="{% static 'vendor/jquery/jquery.min.js'%}"></script>
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
+
+    <!-- Core plugin JavaScript-->
+    <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js'%}"></script>
+
+    <!-- Custom scripts for all pages-->
+    <script src="{% static 'js/sb-admin-2.min.js'%}"></script>
+
+    <!-- Page level plugins -->
+    <script src="{% static 'vendor/chart.js/Chart.min.js'%}"></script>
+
+    <!-- Page level custom scripts -->
+    <script src="{% static 'js/demo/chart-area-demo.js'%}"></script>
+    <script src="{% static 'js/demo/chart-pie-demo.js'%}"></script>
+    
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -158,8 +175,8 @@
                 <div id="suratTugas" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Manajemen Surat Tugas:</h6>
-                        <a class="collapse-item" href="buttons.html">Daftar Surat Tugas</a>
-                        <a class="collapse-item" href="cards.html">Menambah Surat Tugas</a>
+                        <a class="collapse-item" href="/surat/dis/">Daftar Surat Tugas</a>
+                        <a class="collapse-item" href="/surat/add/">Menambah Surat Tugas</a>
                     </div>
                 </div>
             </li>
@@ -430,10 +447,12 @@
                             {{status}}        
                         </div>
                     {%endif%}
-                    <!-- Content Row -->
-                    {% block contents%}
                     
+                    {% block contents%}    
                     {% endblock %}
+
+                    <!-- Content Row -->
+                    
 
                 </div>
                 <!-- /.container-fluid -->
@@ -482,22 +501,6 @@
         </div>
     </div>
 
-    <!-- Bootstrap core JavaScript-->
-    <script src="{% static 'vendor/jquery/jquery.min.js'%}"></script>
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
-
-    <!-- Core plugin JavaScript-->
-    <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js'%}"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script src="{% static 'js/sb-admin-2.min.js'%}"></script>
-
-    <!-- Page level plugins -->
-    <script src="{% static 'vendor/chart.js/Chart.min.js'%}"></script>
-
-    <!-- Page level custom scripts -->
-    <script src="{% static 'js/demo/chart-area-demo.js'%}"></script>
-    <script src="{% static 'js/demo/chart-pie-demo.js'%}"></script>
     
     
     <script>
