--- a/templates/master/dashboard.html
+++ b/templates/master/dashboard.html
@@ -8,6 +8,7 @@
                                     <div class="card bg-light h4 shadow border-secondary">
                                         <div class="rounded m-2 text-center  p-2" style="color:rgba(0, 0, 0, 0.6);background-color: lightgray;">Pejabat Kantor</div>
                                         <div class="card-body d-flex justify-content-center">
+                                            {% if kepala.kepala.nik%}
                                             <table>
                                                 <tr>
                                                     <td class="p-1 h5" style="width: 200px;">Nama:</td>
@@ -26,6 +27,9 @@
                                                     <td class="p-1 h5 ">{{kepala.kepala.kode_golongan|title}}</td>
                                                 </tr>
                                             </table>
+                                            {% else %}
+                                            <span>Silakan Lakukan Konfigurasi Sistem Terlebih dahulu!</span>
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
