--- a/templates/master/display_config.html
+++ b/templates/master/display_config.html
@@ -2,22 +2,57 @@
 {% load static %}
 
 {% block contents%}
-<form method="post">
-	{% csrf_token %}
-<table>
-	<tr>
-		<td class="p-2">Pilih Kepala Kantor:</td>
-		<td class="p-2">{{ forms.kepala }}</td>
-	</tr>
-	<tr>
-		<td class="p-2">Apakah PLT:</td>
-		<td class="p-2">{{forms.is_PLT}}</td>
-	</tr>
-	<tr>
-		<td colspan="2" class="p-2 text-left">
-			<input type='submit' value='Update Config'/>
-		</td>
-	</tr>
-</table>
-</form>
+<div class="p-3 border shadow rounded w-100 justify-content-center d-flex">
+	{% if kepala.kepala.nama %}
+	<table>
+		<tr>
+			<td colspan="2" ><span class="h4">Data Informasi Pejabat Sebelumnya:</span><hr></td>
+		</tr>
+		<tr>
+			<td style="width: 200px;">Nama:</td>
+			<td>{{kepala.kepala.nama}}</td>
+		</tr>
+		<tr>
+			<td>N.I.P:</td>
+			<td>{{kepala.kepala.nik}}</td>
+		</tr>
+		<tr>
+			<td>Jabatan:</td>
+			<td>{{kepala.kepala.kode_jabatan}}</td>
+		</tr>		
+		<tr>
+			<td>Golongan:</td>
+			<td>{{kepala.kepala.kode_golongan}}</td>
+		</tr>
+		<tr>
+			<td>Apakah PLT?</td>
+			<td>{% if kepala.is_PLT %}Ya{%else%}Tidak{%endif%}</td>
+		</tr>
+	</table>
+	{% else %}
+		<span>Informasi Pejabat Belum Dikonfigurasi!</span>
+	{% endif%}
+</div>
+<hr>
+<div>
+	<p class="mx-2 h5"><u>Konfigurasi Baru:</u></p>
+	<form method="post">
+		{% csrf_token %}
+		<table>
+			<tr>
+				<td class="p-2">Pilih Kepala Kantor:</td>
+				<td class="p-2">{{ forms.kepala }}</td>
+			</tr>
+			<tr>
+				<td class="p-2">Apakah PLT:</td>
+				<td class="p-2">{{forms.is_PLT}}</td>
+			</tr>
+			<tr>
+				<td colspan="2" class="p-2 text-left">
+					<input type='submit' value='Update Config'/>
+				</td>
+			</tr>
+		</table>
+	</form>
+</div>
 {% endblock%}
