--- a/templates/master/create_surat_tugas.html
+++ b/templates/master/create_surat_tugas.html
@@ -44,7 +44,7 @@
         <td colspan="2"><input type="checkbox" class="my-3" id="konfirmasi" required><label for="konfirmasi" class="small fw-bold"><i>saya mengkonfirmasi pembuatan surat tugas</i> </label></td>
     </tr>
 	<tr class="p-2">
-		<td colspan="2"><input type="submit" value="Berikutnya ->" class="btn btn-primary"></td>
+		<td colspan="2"><button type="submit" class="btn btn-primary">Berikutnya <i>detail surat tugas</i> &gt;</button></td>
 	</tr>
 </table>
 </form>
