--- a/templates/master/display_surat_tugas.html
+++ b/templates/master/display_surat_tugas.html
@@ -37,8 +37,9 @@
         <td>{{list.updatedAt}}</td>
         <td>{% if list.submit is False %}<span class="text-danger">pending</span>{%else%}<span class="text-success">kirim</span>{%endif%}</td>
         <td>
-            <a class="btn" data-toggle="modal" data-target="#editModal"><i class="fa fa-user-edit"></i></a>
+            <button  class="btn" onclick="window.location.href='/surat/add/{{list.id_surat}}'"><i class="fa fa-user-edit"></i></button>
             <a class="btn" data-toggle="modal"  onclick="deleteGolongan('{{list.kode_golongan}}','{{list.keterangan}}')"><i class="fa fa-trash"></i></a>
+            <button  class="btn" {% if list.submit%}{%else%}disabled{%endif%}><i class="fa fa-download"></i></button>
         </td>
     </tr>
     {% endfor%}
