--- a/templates/base.html
+++ b/templates/base.html
@@ -38,8 +38,8 @@
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fa-solid fa-paperclip"></i>
+                <div class="sidebar-brand-icon d-flex justify-content-center">
+                    <img src="{% static 'img/logo_bapenda_kecil.png'%}" class="my-2 w-100" alt=""/>
                 </div>
                 <div class="sidebar-brand-text mx-3">DISPENDA <sub>SEMARANG</sub></div>
             </a>
