--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Aplikasi Dispenda V.1.0">
+    <meta name="author" content="Suryo Adhy Chandra - 081213270275">
 
     <title>Dispenda</title>
 
@@ -20,7 +20,7 @@
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
-
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/bapenda.ico' %}"/>
     <!-- Custom styles for this template-->
     <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
 
