--- a/templates/master/display_surat_tugas.html
+++ b/templates/master/display_surat_tugas.html
@@ -39,7 +39,7 @@
         <td>
             <button  class="btn" onclick="window.location.href='/surat/add/{{list.id_surat}}'"><i class="fa fa-user-edit"></i></button>
             <button class="btn" onclick="window.location.href='/surat/del/{{list.id_surat}}/'"><i class="fa fa-trash"></i></button>
-            <button  class="btn" {% if list.submit%}{%else%}disabled{%endif%}><i class="fa fa-download"></i></button>
+            <button  class="btn" {% if list.submit%}{%else%}disabled{%endif%} onclick="window.location.href='/surat/export/{{list.id_surat}}'"><i class="fa fa-download"></i></button>
         </td>
     </tr>
     {% endfor%}
