--- a/templates/master/display_surat_tugas.html
+++ b/templates/master/display_surat_tugas.html
@@ -35,11 +35,11 @@
         <td>{{list.kepala_jabatan}}</td>
         <td>{{list.updatedBy}}</td>
         <td>{{list.updatedAt}}</td>
-        <td>{% if list.submit is False %}<span class="text-danger">pending</span>{%else%}<span class="text-success">kirim</span>{%endif%}</td>
+        <td>{% if list.submit is False %}<p class="fw-bold btn btn-danger disabled">PENDING</p>{%else%}<p class="disabled btn btn-success fw-bold">TERKIRIM</p>{%endif%}</td>
         <td>
-            <button  class="btn" onclick="window.location.href='/surat/add/{{list.id_surat}}'"><i class="fa fa-user-edit"></i></button>
-            <button class="btn" onclick="window.location.href='/surat/del/{{list.id_surat}}/'"><i class="fa fa-trash"></i></button>
-            <button  class="btn" {% if list.submit%}{%else%}disabled{%endif%} onclick="window.location.href='/surat/export/{{list.id_surat}}'"><i class="fa fa-download"></i></button>
+            <button  class="btn btn-primary" onclick="window.location.href='/surat/add/{{list.id_surat}}'"><i class="fa fa-user-edit"></i></button>
+            <button class="btn btn-danger" onclick="window.location.href='/surat/del/{{list.id_surat}}/'"><i class="fa fa-trash"></i></button>
+            <button  class="btn btn-info" {% if list.submit%}{%else%}disabled{%endif%} onclick="window.location.href='/surat/export/{{list.id_surat}}'"><i class="fa fa-download"></i></button>
         </td>
     </tr>
     {% endfor%}
