--- a/templates/master/display_pengguna.html
+++ b/templates/master/display_pengguna.html
@@ -3,8 +3,8 @@
 
 {% block contents%}
 <div style="text-wrap: wrap; overflow-x: scroll;">
-<table class="table">
-    <thead>
+<table class="table  table-hover">
+    <thead >
         <th style="width:50px">No.</th>
         <th style="width:100px">Username</th>
         <th style="width:300px">Email</th>
