--- a/templates/master/display_surat_tugas.html
+++ b/templates/master/display_surat_tugas.html
@@ -4,7 +4,7 @@
 {% block contents%}
 <div style="text-wrap: wrap; overflow-x: scroll;">
 <table class="table  table-hover">
-    <thead >
+    <thead class="table-secondary">
         <th style="min-width:50px">No.</th>
         <th style="min-width:250px">No.Surat</th>
         <th style="min-width:100px">Lokasi Dibuat</th>
