--- a/templates/master/display_golongan.html
+++ b/templates/master/display_golongan.html
@@ -4,7 +4,7 @@
 {% block contents%}
 <div style="text-wrap: wrap; overflow-x: scroll;">
 <table class="table  table-hover">
-    <thead >
+    <thead class="table-secondary">
         <th style="width:50px">No.</th>
         <th style="width:100px">Kode</th>
         <th style="width:300px">Keterangan</th>
