ganti login page

--- a/templates/login.html
+++ b/templates/login.html
@@ -23,9 +23,9 @@
 
 </head>
 
-<body class="bg-gradient-primary">
+<body class="bg-gradient-light">
 
-    <div class="container">
+    <div class="container border rounded">
 
         <!-- Outer Row -->
         <div class="row justify-content-center">
@@ -37,7 +37,7 @@
                         <!-- Nested Row within Card Body -->
                         <div class="row">
                             <div class="col-lg-6 d-none d-lg-block ">
-                                <img src="{% static 'img/dispenda.png' %}" alt="Dispenda Semarang">
+                                <img src="{% static 'img/dispenda.jpeg' %}" alt="Dispenda Semarang">
                             </div>
                             <div class="col-lg-6">
                                 <div class="p-5">
