--- a/templates/base.html
+++ b/templates/base.html
@@ -295,52 +295,82 @@
 
                         <!-- Nav Item - Alerts -->
                         <li class="nav-item dropdown no-arrow mx-1">
-                            <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button"
+                            <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fas fa-bell fa-fw"></i>
-                                <!-- Counter - Alerts -->
-                                <span class="badge badge-danger badge-counter">3+</span>
+                                <i class="fas fa-envelope fa-fw"></i>
+                                {% if pending_surat.count > 0 %}
+                                <!-- Counter - Messages -->
+                                <span class="badge badge-danger badge-counter">{{pending_surat.count}}</span>
+                                {% endif %}
                             </a>
-                            <!-- Dropdown - Alerts -->
+                            <!-- Dropdown - Messages -->
                             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                aria-labelledby="alertsDropdown">
+                                aria-labelledby="messagesDropdown">
                                 <h6 class="dropdown-header">
-                                    Alerts Center
+                                    Pending Surat Tugas
                                 </h6>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="mr-3">
-                                        <div class="icon-circle bg-primary">
-                                            <i class="fas fa-file-alt text-white"></i>
+                                {% if pending_surat.count > 0%}
+                                {% for surat in pending_surat %}
+                                    <a class="dropdown-item d-flex align-items-center" href="/surat/add/{{surat.id_surat}}">
+                                        <div class="dropdown-list-image mr-3">
+                                            <img class="rounded-circle" src="{% static 'img/undraw_profile_1.svg' %}"
+                                                alt="...">
+                                            <div class="status-indicator bg-danger"></div>
                                         </div>
-                                    </div>
-                                    <div>
-                                        <div class="small text-gray-500">December 12, 2019</div>
-                                        <span class="font-weight-bold">A new monthly report is ready to download!</span>
-                                    </div>
-                                </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="mr-3">
-                                        <div class="icon-circle bg-success">
-                                            <i class="fas fa-donate text-white"></i>
+                                        <div class="font-weight-bold">
+                                            <div class="text-truncate">Nomor: {{surat.nomor_surat}}</div>
+                                            <div class="small text-gray-500">{{surat.tujuan}}</div>
+                                            <div class="small text-gray-500">Tanggal Dibuat: {{surat.updatedAt}}</div>
+                                            <div class="small text-gray-500">Pembuat Surat: {{surat.updatedBy}}</div>
                                         </div>
-                                    </div>
-                                    <div>
-                                        <div class="small text-gray-500">December 7, 2019</div>
-                                        $290.29 has been deposited into your account!
-                                    </div>
-                                </a>
+                                    </a>
+                                {% endfor%}
+                                {% else %}
                                 <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="mr-3">
-                                        <div class="icon-circle bg-warning">
-                                            <i class="fas fa-exclamation-triangle text-white"></i>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="small text-gray-500">December 2, 2019</div>
-                                        Spending Alert: We've noticed unusually high spending for your account.
-                                    </div>
+                                    <i>tidak ada pending surat tugas</i>
                                 </a>
-                                <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
+                                {% endif %}
+                                
+                            </div>
+                        </li>
+
+                        <li class="nav-item dropdown no-arrow mx-1">
+                            <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fas fa-envelope fa-fw"></i>
+                                {% if pending_surat.count > 0 %}
+                                <!-- Counter - Messages -->
+                                <span class="badge badge-danger badge-counter">{{pending_surat.count}}</span>
+                                {% endif %}
+                            </a>
+                            <!-- Dropdown - Messages -->
+                            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
+                                aria-labelledby="messagesDropdown">
+                                <h6 class="dropdown-header">
+                                    Pending Evaluasi Tugas
+                                </h6>
+                                {% if pending_surat.count > 0%}
+                                {% for surat in pending_surat %}
+                                    <a class="dropdown-item d-flex align-items-center" href="/surat/add/{{surat.id_surat}}">
+                                        <div class="dropdown-list-image mr-3">
+                                            <img class="rounded-circle" src="{% static 'img/undraw_profile_1.svg' %}"
+                                                alt="...">
+                                            <div class="status-indicator bg-danger"></div>
+                                        </div>
+                                        <div class="font-weight-bold">
+                                            <div class="text-truncate">Nomor: {{surat.nomor_surat}}</div>
+                                            <div class="small text-gray-500">{{surat.tujuan}}</div>
+                                            <div class="small text-gray-500">Tanggal Dibuat: {{surat.updatedAt}}</div>
+                                            <div class="small text-gray-500">Pembuat Surat: {{surat.updatedBy}}</div>
+                                        </div>
+                                    </a>
+                                {% endfor%}
+                                {% else %}
+                                <a class="dropdown-item d-flex align-items-center" href="#">
+                                    <i>tidak ada pending surat tugas</i>
+                                </a>
+                                {% endif %}
+                                
                             </div>
                         </li>
 
@@ -349,64 +379,39 @@
                             <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-envelope fa-fw"></i>
+                                {% if pending_surat.count > 0 %}
                                 <!-- Counter - Messages -->
-                                <span class="badge badge-danger badge-counter">7</span>
+                                <span class="badge badge-danger badge-counter">{{pending_surat.count}}</span>
+                                {% endif %}
                             </a>
                             <!-- Dropdown - Messages -->
                             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="messagesDropdown">
                                 <h6 class="dropdown-header">
-                                    Message Center
+                                    Pending Laporan Tugas
                                 </h6>
+                                {% if pending_surat.count > 0%}
+                                {% for surat in pending_surat %}
+                                    <a class="dropdown-item d-flex align-items-center" href="/surat/add/{{surat.id_surat}}">
+                                        <div class="dropdown-list-image mr-3">
+                                            <img class="rounded-circle" src="{% static 'img/undraw_profile_1.svg' %}"
+                                                alt="...">
+                                            <div class="status-indicator bg-danger"></div>
+                                        </div>
+                                        <div class="font-weight-bold">
+                                            <div class="text-truncate">Nomor: {{surat.nomor_surat}}</div>
+                                            <div class="small text-gray-500">{{surat.tujuan}}</div>
+                                            <div class="small text-gray-500">Tanggal Dibuat: {{surat.updatedAt}}</div>
+                                            <div class="small text-gray-500">Pembuat Surat: {{surat.updatedBy}}</div>
+                                        </div>
+                                    </a>
+                                {% endfor%}
+                                {% else %}
                                 <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="{% static 'img/undraw_profile_1.svg' %}"
-                                            alt="...">
-                                        <div class="status-indicator bg-success"></div>
-                                    </div>
-                                    <div class="font-weight-bold">
-                                        <div class="text-truncate">Hi there! I am wondering if you can help me with a
-                                            problem I've been having.</div>
-                                        <div class="small text-gray-500">Emily Fowler · 58m</div>
-                                    </div>
+                                    <i>tidak ada pending surat tugas</i>
                                 </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="{% static 'img/undraw_profile_2.svg'%}"
-                                            alt="...">
-                                        <div class="status-indicator"></div>
-                                    </div>
-                                    <div>
-                                        <div class="text-truncate">I have the photos that you ordered last month, how
-                                            would you like them sent to you?</div>
-                                        <div class="small text-gray-500">Jae Chun · 1d</div>
-                                    </div>
-                                </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="{% static 'img/undraw_profile_3.svg' %}"
-                                            alt="...">
-                                        <div class="status-indicator bg-warning"></div>
-                                    </div>
-                                    <div>
-                                        <div class="text-truncate">Last month's report looks great, I am very happy with
-                                            the progress so far, keep up the good work!</div>
-                                        <div class="small text-gray-500">Morgan Alvarez · 2d</div>
-                                    </div>
-                                </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="https://source.unsplash.com/Mv9hjnEUHR4/60x60"
-                                            alt="...">
-                                        <div class="status-indicator bg-success"></div>
-                                    </div>
-                                    <div>
-                                        <div class="text-truncate">Am I a good boy? The reason I ask is because someone
-                                            told me that people say this to all dogs, even if they aren't good...</div>
-                                        <div class="small text-gray-500">Chicken the Dog · 2w</div>
-                                    </div>
-                                </a>
-                                <a class="dropdown-item text-center small text-gray-500" href="#">Read More Messages</a>
+                                {% endif %}
+                                
                             </div>
                         </li>
 
