tambah notif untuk laporan tugas

--- a/templates/base.html
+++ b/templates/base.html
@@ -327,7 +327,7 @@
                                 {% endfor%}
                                 {% else %}
                                 <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <i>tidak ada pending surat tugas</i>
+                                    <i>Tidak Ada Pending Surat Tugas</i>
                                 </a>
                                 {% endif %}
                                 
@@ -353,12 +353,12 @@
                                 {% for lhe in pending_lhe %}
                                     <a class="dropdown-item d-flex align-items-center" href="#">
                                         <div class="dropdown-list-image mr-3">
-                                            <img class="rounded-circle" src="{% static 'img/undraw_profile_1.svg' %}"
+                                            <img class="rounded-circle" src="{% static 'img/undraw_profile_2.svg' %}"
                                                 alt="...">
                                             <div class="status-indicator bg-danger"></div>
                                         </div>
                                         <div class="font-weight-bold">
-                                            <div class="text-truncate">{{lhe.nomor_lhe|title}}</div>
+                                            <div class="text-truncate">Nomor LHE: {{lhe.nomor_lhe|title}}</div>
                                             <div class="small text-gray-500">Nomor Surat Tugas: {{lhe.suratTugas}}</div>
                                             <div class="small text-gray-500">Tanggal LHE: {{lhe.updatedAt}}</div>
                                             <div class="small text-gray-500">Pembuat LHE: {{lhe.updatedBy}}</div>
@@ -367,7 +367,7 @@
                                 {% endfor%}
                                 {% else %}
                                 <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <i>tidak ada pending surat tugas</i>
+                                    <i>Tidak Ada Pending Laporan Hasil Evaluasi tugas</i>
                                 </a>
                                 {% endif %}
                                 
@@ -379,20 +379,20 @@
                             <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-envelope fa-fw"></i>
-                                {% if pending_surat.count > 0 %}
+                                {% if pending_resume.count > 0 %}
                                 <!-- Counter - Messages -->
-                                <span class="badge badge-danger badge-counter">{{pending_surat.count}}</span>
+                                <span class="badge badge-danger badge-counter">{{pending_resume.count}}</span>
                                 {% endif %}
                             </a>
                             <!-- Dropdown - Messages -->
                             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="messagesDropdown">
                                 <h6 class="dropdown-header">
-                                    Pending Laporan Tugas
+                                    Pending Resume Tugas
                                 </h6>
-                                {% if pending_surat.count > 0%}
-                                {% for surat in pending_surat %}
-                                    <a class="dropdown-item d-flex align-items-center" href="/surat/add/{{surat.id_surat}}">
+                                {% if pending_resume.count > 0%}
+                                {% for resume in pending_resume %}
+                                    <a class="dropdown-item d-flex align-items-center" href="#">
                                         <div class="dropdown-list-image mr-3">
                                             <img class="rounded-circle" src="{% static 'img/undraw_profile_1.svg' %}"
                                                 alt="...">
@@ -408,7 +408,7 @@
                                 {% endfor%}
                                 {% else %}
                                 <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <i>tidak ada pending surat tugas</i>
+                                    <i>Tidak Ada Pending Resume Tugas</i>
                                 </a>
                                 {% endif %}
                                 
