--- a/templates/base.html
+++ b/templates/base.html
@@ -275,7 +275,7 @@
                                 <i class="fas fa-search fa-fw"></i>
                             </a>
                             <!-- Dropdown - Messages -->
-                            <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in"
+                            <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" style="height: 400px;overflow-y: scroll;"
                                 aria-labelledby="searchDropdown">
                                 <form class="form-inline mr-auto w-100 navbar-search">
                                     <div class="input-group">
@@ -344,7 +344,7 @@
                                 {% endif %}
                             </a>
                             <!-- Dropdown - Messages -->
-                            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
+                            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in " style="height: 400px;overflow-y: scroll;"
                                 aria-labelledby="messagesDropdown">
                                 <h6 class="dropdown-header">
                                     Pending Evaluasi Tugas
@@ -385,7 +385,7 @@
                                 {% endif %}
                             </a>
                             <!-- Dropdown - Messages -->
-                            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
+                            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" style="height: 400px;overflow-y: scroll;"
                                 aria-labelledby="messagesDropdown">
                                 <h6 class="dropdown-header">
                                     Pending Resume Tugas
